[package]
name = "MarkdownReplace"
version = "0.1.0"
authors = ["Ivan Leo <ivanleomk@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to help you replace all markdown links with absolute links"
readme = "README.md"
homepage = "https://github.com/ivanleomk/markdown-replace"
repository = "https://github.com/ivanleomk/markdown-replace"
keywords = ["cli", "markdown", "regex"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.5.4"
